Changing README to test if branch editting works.
git-svn-id: http://tinyos-main.googlecode.com/svn/branches/tinyos-2_0_devel-BRANCH@4 285f258d-8064-b571-fbc6-9656dc998e90

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-This is a placeholder for TinyOS 2.0.  When it is released you will find the source for 
-it here.
+Development for TinyOS 2.0 occurs here.  If you can read this, you are on the branch.  If 
+you are in the working group, you can edit the branch.
