--- a/branches/tinyos-2_0_devel-BRANCH/README
+++ b/branches/tinyos-2_0_devel-BRANCH/README
@@ -1,2 +1,2 @@
-Development for TinyOS 2.0 occurs here.  If you can read this, you are on the branch.  If 
-you are in the working group, you can edit the branch.
+Development for TinyOS 2.0 occurs here.  If you can read this, you are 
+on the branch.  If you are in the working group, you can edit the branch.
