80 columns is good for your health.
git-svn-id: http://tinyos-main.googlecode.com/svn/branches/tinyos-2_0_devel-BRANCH@5 285f258d-8064-b571-fbc6-9656dc998e90

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-Development for TinyOS 2.0 occurs here.  If you can read this, you are on the branch.  If 
-you are in the working group, you can edit the branch.
+Development for TinyOS 2.0 occurs here.  If you can read this, you are 
+on the branch.  If you are in the working group, you can edit the branch.
